// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing Dropdown component with multiple categories 1`] = `
<div
  className="dropdown dropdown--wide-content"
>
  <div
    className="dropdown__open-container"
  >
    <p
      className="dropdown__label"
    >
      Show in
    </p>
    <button
      className="dropdown__toggle"
      onClick={[Function]}
      type="button"
    >
      Alaska
      <span
        className="dropdown__toggle-icon icon-arrow-down"
      />
    </button>
  </div>
  <div
    className="dropdown__list-container"
  >
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="clearfix"
        >
          <div
            className="dropdown__categories-container"
          >
            <ul
              className="dropdown__categories"
            >
              <li
                className="dropdown__category-item"
              >
                <button
                  className="dropdown__category"
                  onClick={[Function]}
                  type="button"
                >
                  Uniated States
                </button>
              </li>
            </ul>
          </div>
          <div
            className="dropdown__columns-container cleafix"
          >
            <div
              className="dropdown__items-list-column"
            >
              <ul
                className="dropdown__items-list"
              >
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Alabama
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button dropdown__item-button--active"
                    onClick={[Function]}
                    type="button"
                  >
                    Alaska
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Arizona
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Arkansas
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    California
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Colorado
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Connecticut
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Delaware
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Florida
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Georgia
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Hawaii
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Idaho
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Illinois
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="dropdown__items-list-column"
            >
              <ul
                className="dropdown__items-list"
              >
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Indiana
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Iowa
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Kansas
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Kentucky
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Louisiana
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Maine
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Maryland
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Massachusetts
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Michigan
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Minnesota
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Mississippi
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Missouri
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Montana
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="dropdown__items-list-column"
            >
              <ul
                className="dropdown__items-list"
              >
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Nebraska
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Nevada
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    New Hampshire
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    New Jersey
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    New Mexico
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    New York
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    North Carolina
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    North Dakota
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Ohio
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Oklahoma
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Oregon
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Pennsylvania
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Rhode Island
                  </button>
                </li>
              </ul>
            </div>
            <div
              className="dropdown__items-list-column"
            >
              <ul
                className="dropdown__items-list"
              >
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    South Carolina
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    South Dakota
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Tennessee
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Texas
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Utah
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Vermont
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Virginia
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Washington
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Washington DC
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    West Virginia
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Wisconsin
                  </button>
                </li>
                <li
                  className="dropdown__item"
                >
                  <button
                    className="dropdown__item-button"
                    onClick={[Function]}
                    type="button"
                  >
                    Wyoming
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Snapshot Testing Dropdown component with placeholder 1`] = `
<div
  className="dropdown"
>
  <div
    className="dropdown__open-container"
  >
    <p
      className="dropdown__label"
    >
      Average Supply Levels of
    </p>
    <button
      className="dropdown__toggle dropdown__toggle--placeholder"
      onClick={[Function]}
      type="button"
    >
      Select Medication
      <span
        className="dropdown__toggle-icon icon-arrow-down"
      />
    </button>
  </div>
  <div
    className="dropdown__list-container"
  >
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="clearfix"
        >
          <ul
            className="dropdown__items-list"
          >
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                Zanamivir
              </button>
            </li>
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                Oseltamivir
              </button>
            </li>
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                Simvastatin
              </button>
            </li>
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                All Antiviral Drugs
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Snapshot Testing Dropdown component with single list 1`] = `
<div
  className="dropdown"
>
  <div
    className="dropdown__open-container"
  >
    <p
      className="dropdown__label"
    >
      Average Supply Levels of
    </p>
    <button
      className="dropdown__toggle"
      onClick={[Function]}
      type="button"
    >
      Oseltamivir
      <span
        className="dropdown__toggle-icon icon-arrow-down"
      />
    </button>
  </div>
  <div
    className="dropdown__list-container"
  >
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="clearfix"
        >
          <ul
            className="dropdown__items-list"
          >
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                Zanamivir
              </button>
            </li>
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button dropdown__item-button--active"
                onClick={[Function]}
                type="button"
              >
                Oseltamivir
              </button>
            </li>
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                Simvastatin
              </button>
            </li>
            <li
              className="dropdown__item"
            >
              <button
                className="dropdown__item-button"
                onClick={[Function]}
                type="button"
              >
                All Antiviral Drugs
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
